--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
     },
     "devDependencies": {
         "axios": "^0.19",
-        "bootstrap": "^4.4.1",
+        "bootstrap": "^4.0.0",
         "cross-env": "^7.0",
-        "jquery": "^3.4",
+        "jquery": "^3.2",
         "laravel-echo": "^1.6.1",
         "laravel-mix": "^5.0",
         "lodash": "^4.17.15",
-        "popper.js": "^1.16",
+        "popper.js": "^1.12",
         "pusher-js": "^5.1.1",
-        "vue": "^2.6.11",
+        "resolve-url-loader": "^2.3.1",
+        "sass": "^1.20.1",
+        "sass-loader": "^8.0.0",
+        "vue": "^2.5.17",
+        "vue-template-compiler": "^2.6.10",
         "vuex": "^3.1.2"
     }
 }
